[package]
name = "Ammrs-Usage"
version = "0.1.0"
edition = "2021"

[dependencies]
amms = { git = "https://github.com/darkforestry/amms-rs.git", rev = "791fac3" }
dotenv = "0.15.0"
tokio = { version = "1.41.0", features = ["full"] }
eyre = "0.6.12"
tracing-subscriber = "0.3.18"
alloy = { version = "0.5", features = [
    "contract",
    "network",
    "provider-ws",
    "rpc-types-eth",
    "signer-local",
] }
